hphp/hack/test/typecheck/class_level_where_clauses/this_as/trait_method_lookup_02.php.exp
File "trait_method_lookup_02.php", line 29, characters 26-26:
Some members in class `D` are incompatible with those declared in type `C` (Typing[4341])
  File "trait_method_lookup_02.php", line 18, characters 26-28:
  The method `foo` is not compatible with the overridden method
  File "trait_method_lookup_02.php", line 29, characters 26-26:
  Some members in class `D` are incompatible with those declared in type `C`
  File "trait_method_lookup_02.php", line 18, characters 26-28:
  The method `foo` is not compatible with the overridden method
  File "trait_method_lookup_02.php", line 18, characters 26-28:
  Method `foo` has type `(function(): mixed)` in `D` and comes from ancestor or trait `T`
  File "trait_method_lookup_02.php", line 14, characters 35-37:
  But is has type `(function(): num)` in parent `C`
  File "trait_method_lookup_02.php", line 18, characters 26-28:
  Type `(function(): mixed)` is not a subtype of `(function(): num)`
  File "trait_method_lookup_02.php", line 14, characters 42-44:
  Expected `num`
  File "trait_method_lookup_02.php", line 18, characters 33-37:
  But got `mixed`
  File "trait_method_lookup_02.php", line 18, characters 26-28:
  This declaration was inherited from an object of type `T`. Redeclare this member in `D` with a compatible signature.
